--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "googleapis": "^27.0.0"
+    "googleapis": "^27.0.0",
+    "multer": "^1.4.1"
   }
 }
