--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "csv-parse": "^4.3.3",
     "express": "^4.16.4",
     "googleapis": "^27.0.0",
+    "mongodb": "^3.1.13",
     "multer": "^1.4.1"
   }
 }
