--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     build: .
     ports:
      - "5000:5000"
+  client:
+    build: ./client
+    ports:
+      - "8080:8080"
   mongo:
     image: mongo
     restart: always
