--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "csv-parse": "^4.3.3",
     "express": "^4.16.4",
     "googleapis": "^27.0.0",
+    "lodash": "^4.17.11",
     "mongodb": "^3.1.13",
     "multer": "^1.4.1"
   }
